easy z-index fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ section:nth-of-type(3) {
     background-color: #2C2219;
     margin-top: -15px;
     position: relative;
-    z-index: 5;
+    z-index: 7;
 }
 #main > div:first-of-type {
     position: absolute;
